# JapaneseDictionaryCollection

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  test.py  tox.ini
.github/workflows/: verify.yml
src/: download.py  parseJMdict.py  parseKANJIDIC.py
src/JapaneseDownload/: __init__.py  download.py
src/JapaneseParsers/: parseJMdict.py  parseKANJIDIC.py  parseKRADFILE.py  parseRADKFILE.py  util_parse.py
tests/: test_JDC.py  test_JP.py
