[metadata]
name = Japanese-Dictionary-Collector
version = 0.0.2
author = 34-Matt
author_email = mmdstanley@gmail.com
description = Package used to collect and parse from multiple Japanese Databases
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
url = https://github.com/JapaneseDatabase/JapaneseDictionaryCollection
project_urls = 
    Bug Tracker = https://github.com/JapaneseDatabase/JapaneseDictionaryCollection/issues
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.25
zip_safe = False

[options.packages.find]
where = src
